data/collection/fixes/descriptions/java/JDK-7196531
Error messages are repeated for both instances of a non-repeating annotations since the checkin of the repeating annotation feature. For example:

import java.lang.annotation.*;
class DupAnno {
  void test() {
    @A @A String [] s;
  }
}

gives the output:

DupAnno.java:11: error: duplicate annotation, the declaration of A does not have a ContainedBy annotation
    @A @A String [] s;
    ^
DupAnno.java:11: error: duplicate annotation, the declaration of A does not have a ContainedBy annotation
    @A @A String [] s;
       ^

Pre repeating annotation behaviour was only one error.
